--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/csis-architecture/target/
+/target/
+
+# Maven release plugin files
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Netbeans Files
+/nbproject/private
+
+# SETEC ASTRONOMY
+structurizr.properties
